# mt-imager

./: CMakeLists.txt  README.md
cmake/: FindCasaCore.cmake
code/: CMakeLists.txt
code/gafw/: CMakeLists.txt
code/gafw/Implimentation/GPUImplimentation/: CMakeLists.txt  CUDADeviceManager.cpp  CUDADeviceManager.h  CudaEventPool.cpp  CudaEventPool.h  DataDescriptor.cpp  DataDescriptor.h  GPUArrayOperator.cpp  GPUArrayOperator.h  GPUCudaException.cpp  GPUCudaException.h  GPUDataStore.cpp  GPUDataStore.h  GPUDeviceDescriptor.cpp  GPUDeviceDescriptor.h  GPUEngine.cpp  GPUEngine.h  GPUEngineOperatorStatistic.h  GPUFactory.cpp  GPUFactory.h  GPUSubmissionData.cpp  GPUSubmissionData.h  GPUafw.h  OperationDescriptor.cpp  OperationDescriptor.h  RingBuffer.h  StoreManager.h  SynchronousObject.h  SynchronousQueue.h  ThreadEntry.h  ValidationData.cpp  ValidationData.h
code/gafw/Implimentation/GeneralImplimentation/: Array.cpp  Array.h  ArrayOperator.cpp  ArrayOperator.h  CMakeLists.txt  DataStore.cpp  DataStore.h  DataStoreSnapshotDescriptor.cpp  DataStoreSnapshotDescriptor.h  DataType.cpp  Engine.cpp  Engine.h  Factory.cpp  Factory.h  GAFWValidationException.cpp  GAFWValidationException.h  ParameterWrapper.cpp  PointerWrapper.cpp  ProxyResult.cpp  ProxyResult.h  Registry.cpp  Registry.h  Result.cpp  Result.h  TypeToIntConvert.cpp  TypeToIntConvert.h  ValueWrapper.cpp  gafw-enums.h  gafw-impl.h  globalVariables.cpp
code/gafw/Implimentation/StandardOperators/: AccumulatedSum.cpp  AccumulatedSum.cu  AccumulatedSum.h  ArraysToVector.cpp  ArraysToVector.h  CMakeLists.txt  Complex.cpp  Complex.cu  Complex.h  Equals.cpp  Equals.h  GPUOperatorsFactoryHelper.cu  GPUOperatorsFactoryHelper.h  IFFT2D.cpp  IFFT2D.h  MultiFFT2D.cpp  MultiFFT2D.h  Real.cpp  Real.cu  Real.h  SingleMultiply.cpp  SingleMultiply.cu  SingleMultiply.h  ValueChangeDetect.cpp  ValueChangeDetect.cu  ValueChangeDetect.h  ZeroPad.cpp  ZeroPad.cu  ZeroPad.h  ZeroToCentre2DShift.cpp  ZeroToCentre2DShift.cu  ZeroToCentre2DShift.h  ZeroToCorner2DShift.cpp  ZeroToCorner2DShift.cu  ZeroToCorner2DShift.h  Zeros.cpp  Zeros.cu  Zeros.h  cuFFTException.cpp  cuFFTException.h  (+1 more)
code/gafw/Implimentation/StandardOperators/OperatorsFromTemplates/: AbsMax.h  Chi2.h  GriddedPointsCalculator.h  MaxChi2.h  MaxMetric.h  RootSumSquare.h  Sum.h  SumDifference.h  SumMultiply.h
code/gafw/Implimentation/StandardOperators/Templates/: GeneralReduction.h  GeneralReduction.tcu  GeneralScalarDot.h  GeneralScalarDot.tcu  HandyOperators.h  HelperCudaFunctions.hcu  SharedStructures.h
code/gafw/pil/: Array.h  ArrayDimensions.cpp  ArrayDimensions.h  ArrayOperator.h  BugException.cpp  BugException.h  CMakeLists.txt  DataType.h  Factory.h  FactoryAccess.h  FactoryHelper.h  GAFWException.cpp  GAFWException.h  Identity.h  LogFacility.h  Module.h  ParameterType.h  ParameterWrapper.cpp  ParameterWrapper.h  PointerWrapper.h  PreValidator.h  ProxyResult.h  Result.h  SimpleComplex.h  Structure.h  ValueWrapper.cpp  ValueWrapper.h  gafw.h
code/gafw/tools/: CMakeLists.txt
code/gafw/tools/CSVWriter/: CMakeLists.txt  CSVColumn.h  CSVColumnBase.cpp  CSVColumnBase.h  CSVWriter.cpp  CSVWriter.h  CSVWriterException.cpp  CSVWriterException.h
code/gafw/tools/CppProperties/: CMakeLists.txt  CppProperties.h  Properties.cpp  Properties.h  PropertiesManager.cpp  PropertiesManager.h  PropertyException.cpp  PropertyException.h
code/mt-imager/: CMakeLists.txt
code/mt-imager/app/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  mtimager.cpp  mtimager2.cpp
code/mt-imager/conf/: CMakeLists.txt  log.properties  mtimager.properties
code/mt-imager/lib/: CMakeLists.txt  MTImagerException.cpp  MTImagerException.h  globalInit.cpp  mtimager.h
code/mt-imager/lib/components/: ConfigurationManager.cpp  ConfigurationManager.h  ImageFinalizer.cpp  ImageFinalizer.h  ImageManager.cpp  ImageManager.h  ThreadEntry.h  WImager.cpp  WImager.h
code/mt-imager/lib/components/ConvolutionFunctionsGenerator/: ConvolutionFunctionGenerator.h  OnlyTaperConvFunction.cpp  OnlyTaperConvFunction.h  WPlaneConvFunctionCalculator.cpp  WPlaneConvFunctionCalculator.h  WProjectionConvFunction.cpp  WProjectionConvFunction.h
code/mt-imager/lib/components/VisibilityManager/: EpochColumnLoader.cpp  EpochColumnLoader.h  FrequencyConverter.cpp  FrequencyConverter.h  MSColumnLoader.h  MSVisibilityDataSetAsync.cpp  MSVisibilityDataSetAsync.h  SortIndex.cpp  SortIndex.h  SortedStorage.h  StorageManager.h  VisibilityForPSFStorageManager.cpp  VisibilityForPSFStorageManager.h  VisibilityManager.cpp  VisibilityManager.h
code/mt-imager/lib/components/statistics/: DetailedTimeStatistic.cpp  DetailedTimeStatistic.h  ImagerStatistics.cpp  ImagerStatistics.h  ImagerTimeStatistic.cpp  ImagerTimeStatistic.h  scoped_timer.h
code/mt-imager/lib/operators/: CasaGridSF.cpp  CasaGridSF.cu  CasaGridSF.h  CompressVisibilties.cpp  CompressVisibilties.cu  CompressVisibilties.h  ConvFunctionReOrganize.cpp  ConvFunctionReOrganize.cu  ConvFunctionReOrganize.h  ConvFunctionSupportFind.cpp  ConvFunctionSupportFind.cu  ConvFunctionSupportFind.h  ConvolutionGridder.cpp  ConvolutionGridder.cu  ConvolutionGridder.h  CreateBlockIndex.cpp  CreateBlockIndex.cu  CreateBlockIndex.h  CreateCompressionPlan.cpp  CreateCompressionPlan.cu  CreateCompressionPlan.h  CreateIndexAndReorder.cpp  CreateIndexAndReorder.h  CreateindexAndReorder.cu  ImagerFactoryHelper.cpp  ImagerFactoryHelper.h  ImagerOperators.h  NotSameSupportManipulate.cpp  NotSameSupportManipulate.cu  NotSameSupportManipulate.h  PostIFFTStokesConverter.cpp  PostIFFTStokesConverter.cu  PostIFFTStokesConverter.h  PreIFFTUVCorrection.cpp  PreIFFTUVCorrection.cu  PreIFFTUVCorrection.h  SincCorrector.cpp  SincCorrector.cu  SincCorrector.h  SumConvolutionFunctions.cpp  (+9 more)
