cmake_minimum_required (VERSION 2.6)
project(gafw-gpu)
find_package(CUDA REQUIRED)
find_package(Boost 1.53 REQUIRED COMPONENTS thread)
include_directories(${Boost_INCLUDE_DIR})
include_directories(${CUDA_INCLUDE_DIRS})
include_directories(../pil ../tools/CppProperties ../GeneralImplimentation)
FILE(GLOB MyCSources *.cpp)
add_library(gafw-gpu SHARED ${MyCSources} )
target_link_libraries(gafw-gpu gafw gafw-genimpl ${Boost_LIBRARIES})
